yaml/services/ingress/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-internal-service
spec:
  selector:
    app: myapp
  ports:
  - port: 8080
    targetPort: 80
